Fitted webapp size to client window size, Removed layout bug in navbar, Removed cards container in cubesVisualization, Mayor color changes (wip), Changed font family to "Source Sans Pro", Changed Style of timestamp overlay over 3d visualization component (white border around text & position),  Changed position of parameter checkboxes next to time series component, Changed canvas size of 3d visualization, Create new logo icon for DC Cubes visualization tool,

--- a/legacy/angular_d3/src/app/controllpanell/controllpanel.css
+++ b/legacy/angular_d3/src/app/controllpanell/controllpanel.css
@@ -29,7 +29,8 @@
     margin-bottom: 20px;
     margin-right: 2px;
     margin-left: 2px;
-    background-color: #e7e7e7; color:black;
+    background-color: #e7e7e7; 
+    color:black;
     border: none;
     padding: 15px 32px;
     text-align: center;
