--- a/src/components/topbar/Topbar.css
+++ b/src/components/topbar/Topbar.css
@@ -1,5 +1,5 @@
 .data-time-select{
-    width: 40rem;
+    width: 100%;
     margin-left: 4rem;
 }
 
