--- a/src/components/visualization3d/CubesVisualisation.css
+++ b/src/components/visualization3d/CubesVisualisation.css
@@ -1,16 +1,11 @@
 .cubes-visualization {
-    width: fit-content;
-    /* margin-left: 0px; */
+    height: 50vh;
     margin-top: 15px;
     margin-left: 0;
     margin-right: 0;
-} 
+}
 
 .overlay {
-    background-color: rgba(0, 0, 0, 0.1);
-    border-radius: .25rem;
-    /*background-color: black;*/
-    width: 900px;
     /*opacity: 0.1;
     filter: alpha(opacity = 0.1);
     filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0.1);*/
@@ -18,12 +13,21 @@
     z-index:5;
     font-size: medium;
     padding: 10px;
+    text-align: center;
 }
 
 .timestamp {
-    color: black !important;
+    color: white !important;
     margin-top: .5rem;
-    z-index: 50000;
+    z-index: 5;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 1px;
+    font-weight: bold;
+    letter-spacing: .1em;
+    -webkit-text-fill-color: black; /* Will override color (regardless of order) */
+    -webkit-text-stroke-width: 0.5px;
+    -webkit-text-stroke-color: white;
 }
 
 /* Important for proper on hover rendering if Bootstap card is used */
